# house-price-simulator

./: .gitignore  README.md  load_data.py  manage.py  pyproject.toml  test.py
data/: infocasas_dataframe.py
house_price_app/: apps.py  forms.py  models.py  urls.py  views.py
house_price_app/migrations/: 0001_initial.py  0002_alter_house_bathrooms_alter_house_bedrooms_and_more.py  0003_alter_house_options.py  0004_alter_house_table.py
house_price_app/templates/: input_form.html  result.html
house_price_simulator_project/: asgi.py  settings.py  urls.py  wsgi.py
uruguay_property_scraping/: convert.py  infocasas.json  infocasasapartamentos.json  infocasascasas.json  neighborhoods_canelones.txt  neighborhoods_colonia.txt  neighborhoods_maldonado.txt  neighborhoods_montevideo.txt  scrapy.cfg
uruguay_property_scraping/uruguay_property_scraping/: infocasas.json  items.py  middlewares.py  pipelines.py  settings.py
uruguay_property_scraping/uruguay_property_scraping/spiders/: InfocasasApartamentosSpider.py  InfocasasCasas.py  InfocasasSpider.py  gallitoapartamentos.py  gallitocasas.py
